--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Dream Soft bd</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Your Website</h1>
+        <h1>Dream Soft bd</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -23,7 +23,7 @@
 
     <main>
         <section id="home">
-            <h2>Welcome to Dream Soft</h2>
+            <h2>Welcome to Dream Soft bd</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
 
