--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
         <section id="about">
             <h2>About Us</h2>
-            <p>We are a web development company...</p>
+            <p>We are a Softwar development company...</p>
         </section>
 
         <!-- Add more sections for services, contact, etc. -->
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Website</p>
+        <p>&copy; 2023 Dream soft bd</p>
     </footer>
 
     <script src="script.js"></script>
