--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR & Barcode Scanner App</title>
+    <title>Our Android App Products</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,86 +28,69 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .app-icon {
+        .app {
             text-align: center;
+            margin: 20px 0;
         }
         .app-icon img {
             width: 150px;
             height: 150px;
         }
         .app-name {
-            text-align: center;
             font-size: 24px;
         }
-        .description {
-            text-align: center;
-            margin-top: 20px;
+        .app-description {
+            margin-top: 10px;
             font-size: 18px;
-        }
-        .features {
-            margin-top: 20px;
-        }
-        .feature {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .feature-icon {
-            flex: 1;
-        }
-        .feature-text {
-            flex: 4;
-        }
-        .download-button {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .download-button a {
-            background-color: #007acc;
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-        .download-button a:hover {
-            background-color: #005aa6;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>QR & Barcode Scanner App</h1>
+        <h1>Our Android App Products</h1>
     </header>
     <div class="container">
-        <div class="app-icon">
-            <img src="app_icon.png" alt="App Icon">
+        <div class="app">
+            <div class="app-icon">
+                <img src="app1_icon.png" alt="App 1 Icon">
+            </div>
+            <div class="app-name">App 1 Name</div>
+            <p class="app-description">Description of App 1 goes here. Explain its features and benefits.</p>
         </div>
-        <div class="app-name">Best QR & Barcode Scanner</div>
-        <p class="description">Scan QR codes and barcodes with ease using our feature-rich Android app.</p>
-        <div class="features">
-            <div class="feature">
-                <div class="feature-icon">
-                    <img src="feature1_icon.png" alt="Feature 1 Icon">
-                </div>
-                <div class="feature-text">Fast and accurate scanning of QR codes and barcodes.</div>
+        <div class="app">
+            <div class="app-icon">
+                <img src="app2_icon.png" alt="App 2 Icon">
             </div>
-            <div class="feature">
-                <div class="feature-icon">
-                    <img src="feature2_icon.png" alt="Feature 2 Icon">
-                </div>
-                <div class="feature-text">Supports various code formats and data types.</div>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">
-                    <img src="feature3_icon.png" alt="Feature 3 Icon">
-                </div>
-                <div class="feature-text">Scan history and saved scans for future reference.</div>
-            </div>
+            <div class="app-name">App 2 Name</div>
+            <p class="app-description">Description of App 2 goes here. Explain its features and benefits.</p>
         </div>
-        <div class="download-button">
-            <a href="https://play.google.com/store/apps/details?id=yourapp.package.name" target="_blank">Download Now</a>
+        <div class="app">
+            <div class="app-icon">
+                <img src="app3_icon.png" alt="App 3 Icon">
+            </div>
+            <div class="app-name">App 3 Name</div>
+            <p class="app-description">Description of App 3 goes here. Explain its features and benefits.</p>
+        </div>
+        <div class="app">
+            <div class="app-icon">
+                <img src="app4_icon.png" alt="App 4 Icon">
+            </div>
+            <div class="app-name">App 4 Name</div>
+            <p class="app-description">Description of App 4 goes here. Explain its features and benefits.</p>
+        </div>
+        <div class="app">
+            <div class="app-icon">
+                <img src="app5_icon.png" alt="App 5 Icon">
+            </div>
+            <div class="app-name">App 5 Name</div>
+            <p class="app-description">Description of App 5 goes here. Explain its features and benefits.</p>
+        </div>
+        <div class="app">
+            <div class="app-icon">
+                <img src="app6_icon.png" alt="App 6 Icon">
+            </div>
+            <div class="app-name">App 6 Name</div>
+            <p class="app-description">Description of App 6 goes here. Explain its features and benefits.</p>
         </div>
     </div>
 </body>
