--- a/service.html
+++ b/service.html
@@ -54,42 +54,42 @@
             <div class="app-icon">
                 <img src="app1_icon.png" alt="App 1 Icon">
             </div>
-            <div class="app-name">App 1 Name</div>
+            <div class="app-name">TOP 10 VIDEOS</div>
             <p class="app-description">Description of App 1 goes here. Explain its features and benefits.</p>
         </div>
         <div class="app">
             <div class="app-icon">
                 <img src="app2_icon.png" alt="App 2 Icon">
             </div>
-            <div class="app-name">App 2 Name</div>
+            <div class="app-name">QR & BARCODE SCANNER</div>
             <p class="app-description">Description of App 2 goes here. Explain its features and benefits.</p>
         </div>
         <div class="app">
             <div class="app-icon">
                 <img src="app3_icon.png" alt="App 3 Icon">
             </div>
-            <div class="app-name">App 3 Name</div>
+            <div class="app-name">UPCUMMING...</div>
             <p class="app-description">Description of App 3 goes here. Explain its features and benefits.</p>
         </div>
         <div class="app">
             <div class="app-icon">
                 <img src="app4_icon.png" alt="App 4 Icon">
             </div>
-            <div class="app-name">App 4 Name</div>
+            <div class="app-name">UPCUMMING...</div>
             <p class="app-description">Description of App 4 goes here. Explain its features and benefits.</p>
         </div>
         <div class="app">
             <div class="app-icon">
                 <img src="app5_icon.png" alt="App 5 Icon">
             </div>
-            <div class="app-name">App 5 Name</div>
+            <div class="app-name">UPCUMMING...</div>
             <p class="app-description">Description of App 5 goes here. Explain its features and benefits.</p>
         </div>
         <div class="app">
             <div class="app-icon">
                 <img src="app6_icon.png" alt="App 6 Icon">
             </div>
-            <div class="app-name">App 6 Name</div>
+            <div class="app-name">UPCUMMING...</div>
             <p class="app-description">Description of App 6 goes here. Explain its features and benefits.</p>
         </div>
     </div>
