--- a/service.html
+++ b/service.html
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="app">
             <div class="app-icon">
-                <img src="app1_icon.png" alt="App 1 Icon">
+                <img src="top_10_viodes.jpg" alt="App 1 Icon">
             </div>
             <div class="app-name">TOP 10 VIDEOS</div>
             <p class="app-description">Description of App 1 goes here. Explain its features and benefits.</p>
